fix tab overflow

--- a/src/renderer/index.css
+++ b/src/renderer/index.css
@@ -212,6 +212,7 @@ body { height: 100%; }
 .tabs .tablist {
   display: flex;
   height: 35px;
+  overflow: hidden;
 }
 
 .tabs .tab {
